--- a/Code-KMeans++.ipynb
+++ b/Code-KMeans++.ipynb
@@ -2,6 +2,197 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#import _version\n",
+    "from pandas import DataFrame, Series\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "from numbers import Integral\n",
+    "\n",
+    "\n",
+    "class KMeansPlusPlus:\n",
+    "\n",
+    "    def __init__(self, data_frame, k, columns=None, max_iterations=None,\n",
+    "                 appended_column_name=None):\n",
+    "        if not isinstance(data_frame, DataFrame):\n",
+    "            raise Exception(\"data_frame argument is not a pandas DataFrame\")\n",
+    "        elif data_frame.empty:\n",
+    "            raise Exception(\"The given data frame is empty\")\n",
+    "\n",
+    "        if max_iterations is not None and max_iterations <= 0:\n",
+    "            raise Exception(\"max_iterations must be positive!\")\n",
+    "\n",
+    "        if not isinstance(k, Integral) or k <= 0:\n",
+    "            raise Exception(\"The value of k must be a positive integer\")\n",
+    "\n",
+    "        self.data_frame = data_frame  # m x n\n",
+    "        self.numRows = data_frame.shape[0]  # m\n",
+    "\n",
+    "        # k x n, the i,j entry being the jth coordinate of center i\n",
+    "        self.centers = None\n",
+    "\n",
+    "        # m x k , the i,j entry represents the distance\n",
+    "        # from point i to center j\n",
+    "        # (where i and j start at 0)\n",
+    "        self.distance_matrix = None\n",
+    "\n",
+    "        # Series of length m, consisting of integers 0,1,...,k-1\n",
+    "        self.clusters = None\n",
+    "\n",
+    "        # To keep track of clusters in the previous iteration\n",
+    "        self.previous_clusters = None\n",
+    "\n",
+    "        self.max_iterations = max_iterations\n",
+    "        self.appended_column_name = appended_column_name\n",
+    "        self.k = k\n",
+    "\n",
+    "        if columns is None:\n",
+    "            self.columns = data_frame.columns\n",
+    "        else:\n",
+    "            for col in columns:\n",
+    "                if col not in data_frame.columns:\n",
+    "                    raise Exception(\n",
+    "                        \"Column '%s' not found in the given DataFrame\" % col)\n",
+    "                if not self._is_numeric(col):\n",
+    "                    raise Exception(\n",
+    "                        \"The column '%s' is either not numeric or contains NaN values\" % col)\n",
+    "            self.columns = columns\n",
+    "\n",
+    "    def _populate_initial_centers(self):\n",
+    "        rows = []\n",
+    "        rows.append(self._grab_random_point())\n",
+    "        distances = None\n",
+    "\n",
+    "        while len(rows) < self.k:\n",
+    "            if distances is None:\n",
+    "                distances = self._distances_from_point(rows[0])\n",
+    "            else:\n",
+    "                distances = self._distances_from_point_list(rows)\n",
+    "\n",
+    "            normalized_distances = distances / distances.sum()\n",
+    "            normalized_distances.sort()\n",
+    "            dice_roll = np.random.rand()\n",
+    "            min_over_roll = normalized_distances[\n",
+    "                normalized_distances.cumsum() >= dice_roll].min()\n",
+    "            index = normalized_distances[\n",
+    "                normalized_distances == min_over_roll].index[0]\n",
+    "            rows.append(self.data_frame[self.columns].iloc[index, :])\n",
+    "\n",
+    "        self.centers = DataFrame(rows, columns=self.columns)\n",
+    "\n",
+    "    def _compute_distances(self):\n",
+    "        if self.centers is None:\n",
+    "            raise Exception(\n",
+    "                \"Must populate centers before distances can be calculated!\")\n",
+    "\n",
+    "        column_dict = {}\n",
+    "\n",
+    "        for i in list(range(self.k)):\n",
+    "            column_dict[i] = self._distances_from_point(\n",
+    "                self.centers.iloc[i, :])\n",
+    "\n",
+    "        self.distance_matrix = DataFrame(\n",
+    "            column_dict, columns=list(range(self.k)))\n",
+    "\n",
+    "    def _get_clusters(self):\n",
+    "        if self.distance_matrix is None:\n",
+    "            raise Exception(\n",
+    "                \"Must compute distances before closest centers can be calculated\")\n",
+    "\n",
+    "        min_distances = self.distance_matrix.min(axis=1)\n",
+    "\n",
+    "        # We need to make sure the index\n",
+    "        min_distances.index = list(range(self.numRows))\n",
+    "\n",
+    "        cluster_list = [boolean_series.index[j]\n",
+    "                        for boolean_series in\n",
+    "                        [\n",
+    "                            self.distance_matrix.iloc[i,\n",
+    "                                                      :] == min_distances.iloc[i]\n",
+    "                            for i in list(range(self.numRows))\n",
+    "                        ]\n",
+    "                        for j in list(range(self.k))\n",
+    "                        if boolean_series[j]\n",
+    "                        ]\n",
+    "\n",
+    "        self.clusters = Series(cluster_list, index=self.data_frame.index)\n",
+    "\n",
+    "    def _compute_new_centers(self):\n",
+    "        if self.centers is None:\n",
+    "            raise Exception(\"Centers not initialized!\")\n",
+    "\n",
+    "        if self.clusters is None:\n",
+    "            raise Exception(\"Clusters not computed!\")\n",
+    "\n",
+    "        for i in list(range(self.k)):\n",
+    "            self.centers.ix[i, :] = self.data_frame[\n",
+    "                self.columns].ix[self.clusters == i].mean()\n",
+    "\n",
+    "    def cluster(self):\n",
+    "\n",
+    "        self._populate_initial_centers()\n",
+    "        self._compute_distances()\n",
+    "        self._get_clusters()\n",
+    "\n",
+    "        counter = 0\n",
+    "\n",
+    "        while True:\n",
+    "            counter += 1\n",
+    "\n",
+    "            self.previous_clusters = self.clusters.copy()\n",
+    "\n",
+    "            self._compute_new_centers()\n",
+    "            self._compute_distances()\n",
+    "            self._get_clusters()\n",
+    "\n",
+    "            if self.max_iterations is not None and counter >= self.max_iterations:\n",
+    "                break\n",
+    "            elif all(self.clusters == self.previous_clusters):\n",
+    "                break\n",
+    "\n",
+    "        if self.appended_column_name is not None:\n",
+    "            try:\n",
+    "                self.data_frame[self.appended_column_name] = self.clusters\n",
+    "            except:\n",
+    "                warnings.warn(\n",
+    "                    \"Unable to append a column named %s to your data.\" %\n",
+    "                    self.appended_column_name)\n",
+    "                warnings.warn(\n",
+    "                    \"However, the clusters are available via the cluster attribute\")\n",
+    "\n",
+    "    def _distances_from_point(self, point):\n",
+    "        # pandas Series\n",
+    "        return np.power(self.data_frame[self.columns] - point, 2).sum(axis=1)\n",
+    "\n",
+    "    def _distances_from_point_list(self, point_list):\n",
+    "        result = None\n",
+    "\n",
+    "        for point in point_list:\n",
+    "            if result is None:\n",
+    "                result = self._distances_from_point(point)\n",
+    "            else:\n",
+    "                result = pd.concat(\n",
+    "                    [result, self._distances_from_point(point)], axis=1).min(axis=1)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def _grab_random_point(self):\n",
+    "        index = np.random.random_integers(0, self.numRows - 1)\n",
+    "        # NumPy array\n",
+    "        return self.data_frame[self.columns].iloc[index, :].values\n",
+    "\n",
+    "    def _is_numeric(self, col):\n",
+    "        return all(np.isreal(self.data_frame[col])) and not any(np.isnan(self.data_frame[col]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
