--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#distance square\n",
-    "def dist_sq(a, b):\n",
+    "def dist_sq(a, b, axis=0):\n",
     "    return np.sum((a-b)**2)\n",
-    "#distance square for every point to the centroid\n",
+    "#minimum distance square for every point to the centroid\n",
     "def point_sq(data,index):\n",
-    "    Dist=list()\n",
-    "    for i in range(data.shape[0]):\n",
-    "        Dist.append(dist_sq(data.ix[index],data.ix[i]))\n",
-    "    return Dist\n",
-    "def dist_prob(Dist):\n",
-    "    return (Dist/np.sum(np.array(Dist)))"
+    "    return [min(dist_sq(data.ix[index], point, axis=1)) for point in data]\n",
+    "#calculate cost\n",
+    "def cost(index,data):\n",
+    "    return np.sum([min(dist_sq(data.ix[index], point)) for point in data])\n",
+    "#calculate probability\n",
+    "def dist_prob(Dist,cost):\n",
+    "    return Dist/cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +36,8 @@
     "    centroid[0]=data.ix[index]\n",
     "    for number in range(k-1):\n",
     "        distance=point_sq(data,index)\n",
-    "        prob=dist_prob(distance).tolist()\n",
+    "        cost_x=cost(index,data)\n",
+    "        prob=dist_prob(distance,cost_x).tolist()\n",
     "        #prob[index]=0\n",
     "        index=np.random.choice(data.shape[0],1,prob)\n",
     "        centroid[number+1]=data.ix[index]\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -138,9 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -159,22 +161,21 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.80265401,  0.26396164],\n",
-       "        [ 0.30738329,  0.93670259],\n",
-       "        [ 0.08570629,  0.32116847],\n",
-       "        [ 0.4947732 ,  0.28917512],\n",
-       "        [ 0.26616442,  0.58670997],\n",
-       "        [ 0.72585359,  0.8118506 ],\n",
-       "        [ 0.05606172,  0.75503595],\n",
-       "        [ 0.22941675,  0.10854025]]),\n",
-       " array([3, 0, 4, 4, 0, 3, 5, 5, 2, 2, 2, 4, 3, 0, 5, 7, 5, 0, 3, 5, 5, 5, 2,\n",
-       "        0, 6, 1, 3, 7, 3, 5, 1, 3, 4, 4, 3, 5, 6, 5, 1, 0, 5, 0, 5, 7, 7, 3,\n",
-       "        5, 0, 7, 4, 3, 0, 6, 5, 2, 1, 4, 5, 5, 3, 4, 7, 5, 5, 5, 4, 5, 0, 2,\n",
-       "        0, 5, 4, 7, 1, 3, 5, 7, 3, 4, 3, 4, 1, 6, 0, 0, 1, 1, 1, 2, 5, 5, 4,\n",
-       "        0, 5, 3, 7, 0, 3, 5, 4]))"
+       "(array([[ 0.12091805,  0.57751992],\n",
+       "        [ 0.74953689,  0.35606413],\n",
+       "        [ 0.78730146,  0.09197846],\n",
+       "        [ 0.15072662,  0.22911294],\n",
+       "        [ 0.75477461,  0.71763372],\n",
+       "        [ 0.25517226,  0.90847182],\n",
+       "        [ 0.43094746,  0.34754852]]),\n",
+       " array([3, 1, 4, 6, 4, 5, 2, 1, 4, 4, 4, 4, 2, 6, 4, 0, 3, 2, 5, 4, 3, 6, 6,\n",
+       "        4, 3, 5, 0, 3, 0, 5, 2, 2, 5, 4, 3, 3, 4, 0, 6, 4, 6, 0, 5, 6, 4, 0,\n",
+       "        4, 5, 6, 6, 0, 4, 5, 5, 4, 5, 0, 3, 4, 0, 2, 1, 5, 4, 0, 0, 2, 4, 2,\n",
+       "        6, 1, 3, 6, 0, 4, 5, 4, 6, 0, 3, 2, 6, 6, 6, 3, 5, 1, 4, 1, 1, 2, 3,\n",
+       "        4, 1, 2, 6, 3, 3, 1, 6]))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
