--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,29 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#distance square\n",
-    "def dist_sq(a, b, axis=0):\n",
+    "def dist_sq(a, b):\n",
     "    return np.sum((a-b)**2)\n",
     "#minimum distance square for every point to the centroid\n",
     "def point_sq(data,index):\n",
-    "    return [min(dist_sq(data.ix[index], point, axis=1)) for point in data]\n",
-    "#calculate cost\n",
-    "def cost(index,data):\n",
-    "    return np.sum([min(dist_sq(data.ix[index], point)) for point in data])\n",
+    "    dist=[]\n",
+    "    for i in range(data.shape[0]):\n",
+    "        dist.append(dist_sq(data.ix[i],data.ix[index]))\n",
+    "    return dist\n",
+    "        \n",
     "#calculate probability\n",
-    "def dist_prob(Dist,cost):\n",
-    "    return Dist/cost"
+    "def dist_prob(Dist):\n",
+    "    return Dist/np.sum(Dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -36,8 +37,7 @@
     "    centroid[0]=data.ix[index]\n",
     "    for number in range(k-1):\n",
     "        distance=point_sq(data,index)\n",
-    "        cost_x=cost(index,data)\n",
-    "        prob=dist_prob(distance,cost_x).tolist()\n",
+    "        prob=dist_prob(distance).tolist()\n",
     "        #prob[index]=0\n",
     "        index=np.random.choice(data.shape[0],1,prob)\n",
     "        centroid[number+1]=data.ix[index]\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -161,21 +161,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.12091805,  0.57751992],\n",
-       "        [ 0.74953689,  0.35606413],\n",
-       "        [ 0.78730146,  0.09197846],\n",
-       "        [ 0.15072662,  0.22911294],\n",
-       "        [ 0.75477461,  0.71763372],\n",
-       "        [ 0.25517226,  0.90847182],\n",
-       "        [ 0.43094746,  0.34754852]]),\n",
-       " array([3, 1, 4, 6, 4, 5, 2, 1, 4, 4, 4, 4, 2, 6, 4, 0, 3, 2, 5, 4, 3, 6, 6,\n",
-       "        4, 3, 5, 0, 3, 0, 5, 2, 2, 5, 4, 3, 3, 4, 0, 6, 4, 6, 0, 5, 6, 4, 0,\n",
-       "        4, 5, 6, 6, 0, 4, 5, 5, 4, 5, 0, 3, 4, 0, 2, 1, 5, 4, 0, 0, 2, 4, 2,\n",
-       "        6, 1, 3, 6, 0, 4, 5, 4, 6, 0, 3, 2, 6, 6, 6, 3, 5, 1, 4, 1, 1, 2, 3,\n",
-       "        4, 1, 2, 6, 3, 3, 1, 6]))"
+       "(array([[ 0.18033065,  0.84788545],\n",
+       "        [ 0.8577913 ,  0.20421997],\n",
+       "        [ 0.61000905,  0.92125036],\n",
+       "        [ 0.21183479,  0.07788416],\n",
+       "        [ 0.57540644,  0.18846664],\n",
+       "        [ 0.58645548,  0.51559082],\n",
+       "        [ 0.86633054,  0.6260486 ],\n",
+       "        [ 0.22313333,  0.41623434]]),\n",
+       " array([3, 6, 3, 7, 2, 6, 7, 4, 6, 6, 7, 5, 5, 6, 2, 3, 4, 6, 3, 6, 4, 6, 7,\n",
+       "        4, 2, 2, 1, 1, 5, 1, 7, 0, 0, 7, 0, 6, 1, 5, 0, 2, 3, 5, 0, 5, 6, 4,\n",
+       "        0, 3, 4, 4, 1, 6, 0, 1, 5, 4, 6, 7, 7, 4, 7, 7, 0, 1, 3, 2, 0, 6, 5,\n",
+       "        1, 1, 1, 1, 2, 7, 5, 3, 0, 6, 4, 4, 0, 4, 6, 7, 5, 3, 2, 4, 7, 2, 4,\n",
+       "        4, 7, 3, 2, 6, 2, 7, 3]))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
