--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -12,10 +12,10 @@
     "def dist_sq(a, b):\n",
     "    return np.sum((a-b)**2)\n",
     "#minimum distance square for every point to the centroid\n",
-    "def point_sq(data,index):\n",
+    "def point_sq(data,centroid):\n",
     "    dist=[]\n",
     "    for i in range(data.shape[0]):\n",
-    "        dist.append(dist_sq(data.ix[i],data.ix[index]))\n",
+    "        dist.append(min(dist_sq(data.ix[i],c) for c in centroid))\n",
     "    return dist\n",
     "        \n",
     "#calculate probability\n",
@@ -25,35 +25,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def kmeansplusplus(data, k, d):\n",
-    "    centroid=np.zeros([k,d])\n",
-    "    index=np.random.choice(data.shape[0],1)\n",
-    "    centroid[0]=data.ix[index]\n",
+    "    index=int(np.random.choice(data.shape[0],1))\n",
+    "    centroid=np.array(data.ix[index])\n",
     "    for number in range(k-1):\n",
-    "        distance=point_sq(data,index)\n",
+    "        distance=point_sq(data,np.array(centroid))\n",
     "        prob=dist_prob(distance).tolist()\n",
-    "        #prob[index]=0\n",
-    "        index=np.random.choice(data.shape[0],1,prob)\n",
-    "        centroid[number+1]=data.ix[index]\n",
+    "        index=int(np.random.choice(data.shape[0],1,prob))\n",
+    "        centroid=np.vstack([centroid,np.array(data.ix[index])])\n",
     "    return centroid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def kmeans(dataSet, initial):\n",
-    "    centroids=initial\n",
+    "    centroids=np.array(initial)\n",
     "    # Initialize book keeping vars.\n",
     "    iterations = 0\n",
     "    oldCentroids = np.zeros([initial.shape[0],initial.shape[1]])\n",
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -107,18 +105,16 @@
     "    # For each element in the dataset, chose the closest centroid. \n",
     "    # Make that centroid the element's label.\n",
     "    l=[]\n",
-    "    for i in range(dataSet.shape[0]):\n",
-    "        dist=np.zeros(centroids.shape[0])\n",
-    "        for j in range(centroids.shape[0]):\n",
-    "            dist[j]=dist_sq(dataSet.ix[i],centroids[j])\n",
-    "        l.append(np.argmin(dist))\n",
+    "    for i in range(data.shape[0]):\n",
+    "        l.append(np.argmin(list(dist_sq(data.ix[i],c) for c in centroids)))\n",
     "    return l\n",
+    "\n",
     "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -161,22 +157,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.18033065,  0.84788545],\n",
-       "        [ 0.8577913 ,  0.20421997],\n",
-       "        [ 0.61000905,  0.92125036],\n",
-       "        [ 0.21183479,  0.07788416],\n",
-       "        [ 0.57540644,  0.18846664],\n",
-       "        [ 0.58645548,  0.51559082],\n",
-       "        [ 0.86633054,  0.6260486 ],\n",
-       "        [ 0.22313333,  0.41623434]]),\n",
-       " array([3, 6, 3, 7, 2, 6, 7, 4, 6, 6, 7, 5, 5, 6, 2, 3, 4, 6, 3, 6, 4, 6, 7,\n",
-       "        4, 2, 2, 1, 1, 5, 1, 7, 0, 0, 7, 0, 6, 1, 5, 0, 2, 3, 5, 0, 5, 6, 4,\n",
-       "        0, 3, 4, 4, 1, 6, 0, 1, 5, 4, 6, 7, 7, 4, 7, 7, 0, 1, 3, 2, 0, 6, 5,\n",
-       "        1, 1, 1, 1, 2, 7, 5, 3, 0, 6, 4, 4, 0, 4, 6, 7, 5, 3, 2, 4, 7, 2, 4,\n",
-       "        4, 7, 3, 2, 6, 2, 7, 3]))"
+       "(array([[ 0.23801647,  0.52264777],\n",
+       "        [ 0.70476309,  0.51468006],\n",
+       "        [ 0.90115282,  0.17373722],\n",
+       "        [ 0.51772984,  0.75059068],\n",
+       "        [ 0.6232516 ,  0.25712429],\n",
+       "        [ 0.88844844,  0.77337313],\n",
+       "        [ 0.14159695,  0.24405234],\n",
+       "        [ 0.24916151,  0.90676037]]),\n",
+       " array([4, 2, 4, 6, 4, 4, 5, 6, 2, 0, 6, 6, 4, 6, 5, 0, 3, 0, 6, 4, 5, 1, 4,\n",
+       "        1, 1, 6, 0, 2, 0, 3, 3, 5, 3, 3, 2, 1, 0, 1, 3, 6, 2, 5, 2, 1, 6, 4,\n",
+       "        0, 0, 4, 7, 7, 0, 7, 1, 6, 1, 1, 2, 2, 5, 0, 4, 0, 5, 7, 4, 4, 7, 0,\n",
+       "        6, 6, 3, 0, 3, 6, 2, 6, 0, 7, 1, 7, 3, 1, 3, 4, 4, 0, 3, 7, 6, 5, 7,\n",
+       "        0, 3, 1, 4, 6, 6, 6, 6]))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
