--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
     "    index=int(np.random.choice(data.shape[0],1))\n",
     "    centroid=np.array(data.ix[index])\n",
     "    for number in range(k-1):\n",
-    "        distance=point_sq(data,np.array(centroid))\n",
+    "        distance=point_sq(data,centroid)\n",
     "        prob=dist_prob(distance).tolist()\n",
     "        index=int(np.random.choice(data.shape[0],1,prob))\n",
     "        centroid=np.vstack([centroid,np.array(data.ix[index])])\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -157,22 +157,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.23801647,  0.52264777],\n",
-       "        [ 0.70476309,  0.51468006],\n",
-       "        [ 0.90115282,  0.17373722],\n",
-       "        [ 0.51772984,  0.75059068],\n",
-       "        [ 0.6232516 ,  0.25712429],\n",
-       "        [ 0.88844844,  0.77337313],\n",
-       "        [ 0.14159695,  0.24405234],\n",
-       "        [ 0.24916151,  0.90676037]]),\n",
-       " array([4, 2, 4, 6, 4, 4, 5, 6, 2, 0, 6, 6, 4, 6, 5, 0, 3, 0, 6, 4, 5, 1, 4,\n",
-       "        1, 1, 6, 0, 2, 0, 3, 3, 5, 3, 3, 2, 1, 0, 1, 3, 6, 2, 5, 2, 1, 6, 4,\n",
-       "        0, 0, 4, 7, 7, 0, 7, 1, 6, 1, 1, 2, 2, 5, 0, 4, 0, 5, 7, 4, 4, 7, 0,\n",
-       "        6, 6, 3, 0, 3, 6, 2, 6, 0, 7, 1, 7, 3, 1, 3, 4, 4, 0, 3, 7, 6, 5, 7,\n",
-       "        0, 3, 1, 4, 6, 6, 6, 6]))"
+       "(array([[ 0.50383169,  0.26241495],\n",
+       "        [ 0.85142553,  0.74149972],\n",
+       "        [ 0.16780093,  0.48693875],\n",
+       "        [ 0.15716819,  0.10841058],\n",
+       "        [ 0.57868249,  0.58296941],\n",
+       "        [ 0.08120397,  0.84902124],\n",
+       "        [ 0.86500089,  0.25373253],\n",
+       "        [ 0.38558541,  0.8119695 ]]),\n",
+       " array([7, 7, 5, 7, 3, 0, 4, 5, 2, 7, 3, 2, 3, 0, 5, 0, 1, 3, 3, 2, 5, 0, 1,\n",
+       "        1, 0, 2, 4, 1, 6, 0, 7, 4, 6, 7, 6, 1, 2, 3, 1, 1, 3, 4, 2, 0, 4, 2,\n",
+       "        1, 3, 6, 1, 0, 6, 6, 6, 7, 0, 5, 1, 5, 2, 5, 7, 2, 4, 1, 5, 6, 2, 6,\n",
+       "        7, 2, 6, 5, 0, 0, 6, 6, 0, 6, 1, 1, 0, 6, 0, 6, 5, 6, 4, 1, 1, 0, 4,\n",
+       "        4, 2, 4, 3, 4, 7, 6, 0]))"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
