updates to write up

--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -57,11 +57,54 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-d3a2de7929af>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d3a2de7929af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <a href=\"javascript:code_toggle()\">[Toggle Code]</a>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "ADD FIGURE HERE"
+    "from sklearn import cluster\n",
+    "from matplotlib import pyplot\n",
+    "import numpy as np\n",
+    "\n",
+    "# load iris data and exclude species column\n",
+    "iris = sns.load_dataset(\"iris\").ix[:, 0:3]\n",
+    "# set number of clusters #\n",
+    "k = 3\n",
+    "kmeans = cluster.KMeans(n_clusters=k)\n",
+    "kmeans.fit(iris)\n",
+    "labels = kmeans.labels_\n",
+    "centroids = kmeans.cluster_centers_\n",
+    "from matplotlib import pyplot\n",
+    "import numpy as np\n",
+    "\n",
+    "from matplotlib import pyplot\n",
+    "import numpy as np\n",
+    "iris['labels'] = labels\n",
+    "\n",
+    "with plt.style.context('ggplot'):\n",
+    "    plt.scatter(iris.ix[:,1], iris.ix[:,2], c=labels)\n",
+    "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
