--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "\n",
     "def kmeansplusplus(data, k, d):\n",
     "    index=int(np.random.choice(data.shape[0],1))\n",
     "    centroid=np.array(data.ix[index])\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -136,20 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#test \n",
-    "data=DataFrame([np.random.random(100),np.random.random(100)]).transpose()\n",
-    "initial= kmeansplusplus(data,8,2)"
+    "data=DataFrame([np.random.random(100),np.random.random(100)]).transpose()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -157,38 +157,30 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.50383169,  0.26241495],\n",
-       "        [ 0.85142553,  0.74149972],\n",
-       "        [ 0.16780093,  0.48693875],\n",
-       "        [ 0.15716819,  0.10841058],\n",
-       "        [ 0.57868249,  0.58296941],\n",
-       "        [ 0.08120397,  0.84902124],\n",
-       "        [ 0.86500089,  0.25373253],\n",
-       "        [ 0.38558541,  0.8119695 ]]),\n",
-       " array([7, 7, 5, 7, 3, 0, 4, 5, 2, 7, 3, 2, 3, 0, 5, 0, 1, 3, 3, 2, 5, 0, 1,\n",
-       "        1, 0, 2, 4, 1, 6, 0, 7, 4, 6, 7, 6, 1, 2, 3, 1, 1, 3, 4, 2, 0, 4, 2,\n",
-       "        1, 3, 6, 1, 0, 6, 6, 6, 7, 0, 5, 1, 5, 2, 5, 7, 2, 4, 1, 5, 6, 2, 6,\n",
-       "        7, 2, 6, 5, 0, 0, 6, 6, 0, 6, 1, 1, 0, 6, 0, 6, 5, 6, 4, 1, 1, 0, 4,\n",
-       "        4, 2, 4, 3, 4, 7, 6, 0]))"
+       "(array([[ 0.59422564,  0.80933702],\n",
+       "        [ 0.86454954,  0.79332483],\n",
+       "        [ 0.10780979,  0.71640435],\n",
+       "        [ 0.32873599,  0.81228134],\n",
+       "        [ 0.1416032 ,  0.29209738],\n",
+       "        [ 0.89076221,  0.28735156],\n",
+       "        [ 0.51642411,  0.51007658],\n",
+       "        [ 0.55500876,  0.13339324]]),\n",
+       " array([5, 7, 4, 7, 0, 1, 5, 4, 2, 1, 0, 3, 6, 7, 7, 2, 0, 5, 0, 1, 3, 2, 6,\n",
+       "        6, 4, 1, 4, 5, 6, 6, 7, 2, 1, 2, 1, 4, 3, 5, 7, 1, 5, 5, 5, 6, 7, 5,\n",
+       "        3, 4, 3, 1, 3, 7, 0, 4, 5, 2, 3, 0, 5, 7, 7, 4, 2, 7, 4, 7, 7, 1, 0,\n",
+       "        7, 7, 6, 6, 5, 6, 5, 3, 2, 1, 7, 2, 5, 4, 5, 4, 3, 0, 2, 1, 3, 7, 0,\n",
+       "        0, 3, 4, 3, 6, 5, 0, 6]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "initial= kmeansplusplus(data,8,2)\n",
     "kmeans(data, initial)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
