--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
     "def point_sq(data,centroid):\n",
     "    dist=[]\n",
     "    for i in range(data.shape[0]):\n",
-    "        dist.append(min(dist_sq(data.ix[i],c) for c in centroid))\n",
+    "        dist.append(min(dist_sq(data[i],c) for c in centroid))\n",
     "    return dist\n",
     "        \n",
     "#calculate probability\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,28 +34,30 @@
     "\n",
     "def kmeansplusplus(data, k, d):\n",
     "    index=int(np.random.choice(data.shape[0],1))\n",
-    "    centroid=np.array(data.ix[index])\n",
+    "    centroid=data[index]\n",
+    "    data=np.delete(data,index,axis=0)\n",
     "    for number in range(k-1):\n",
     "        distance=point_sq(data,centroid)\n",
     "        prob=dist_prob(distance).tolist()\n",
     "        index=int(np.random.choice(data.shape[0],1,prob))\n",
-    "        centroid=np.vstack([centroid,np.array(data.ix[index])])\n",
+    "        centroid=np.vstack([centroid,data[index]])\n",
+    "        data=np.delete(data,index,axis=0)\n",
     "    return centroid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def kmeans(dataSet, initial):\n",
-    "    centroids=np.array(initial)\n",
+    "    centroids=initial\n",
     "    # Initialize book keeping vars.\n",
     "    iterations = 0\n",
-    "    oldCentroids = np.zeros([initial.shape[0],initial.shape[1]])\n",
+    "    oldCentroids = np.zeros(initial.shape)\n",
     "    \n",
     "    # Run the main k-means algorithm\n",
     "    while not shouldStop(oldCentroids, centroids, iterations):\n",
@@ -70,12 +72,12 @@
     "        centroids = getCentroids(dataSet, l)\n",
     "        \n",
     "    # We can get the labels too by calling getLabels(dataSet, centroids)\n",
-    "    return centroids, np.array(l)\n"
+    "    return centroids, np.array(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +109,7 @@
     "    # Make that centroid the element's label.\n",
     "    l=[]\n",
     "    for i in range(data.shape[0]):\n",
-    "        l.append(np.argmin(list(dist_sq(data.ix[i],c) for c in centroids)))\n",
+    "        l.append(np.argmin(list(dist_sq(data[i],c) for c in centroids)))\n",
     "    return l\n",
     "\n",
     "            \n"
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +130,7 @@
     "    # Each centroid is the geometric mean of the points that\n",
     "    # have that centroid's label. Important: If a centroid is empty (no points have\n",
     "    # that centroid's label) you should randomly re-initialize it.\n",
-    "    data_new = dataSet.copy()\n",
+    "    data_new = DataFrame(dataSet.copy())\n",
     "    data_new['Labels'] = labels\n",
     "    data_new = data_new.groupby(['Labels']).mean().iloc[:,:2]\n",
     "    return np.array(data_new)\n",
@@ -137,19 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#test \n",
-    "data=DataFrame([np.random.random(100),np.random.random(100)]).transpose()\n"
+    "data=np.array(DataFrame([np.random.random(100),np.random.random(100)]).transpose())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -157,22 +159,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.59422564,  0.80933702],\n",
-       "        [ 0.86454954,  0.79332483],\n",
-       "        [ 0.10780979,  0.71640435],\n",
-       "        [ 0.32873599,  0.81228134],\n",
-       "        [ 0.1416032 ,  0.29209738],\n",
-       "        [ 0.89076221,  0.28735156],\n",
-       "        [ 0.51642411,  0.51007658],\n",
-       "        [ 0.55500876,  0.13339324]]),\n",
-       " array([5, 7, 4, 7, 0, 1, 5, 4, 2, 1, 0, 3, 6, 7, 7, 2, 0, 5, 0, 1, 3, 2, 6,\n",
-       "        6, 4, 1, 4, 5, 6, 6, 7, 2, 1, 2, 1, 4, 3, 5, 7, 1, 5, 5, 5, 6, 7, 5,\n",
-       "        3, 4, 3, 1, 3, 7, 0, 4, 5, 2, 3, 0, 5, 7, 7, 4, 2, 7, 4, 7, 7, 1, 0,\n",
-       "        7, 7, 6, 6, 5, 6, 5, 3, 2, 1, 7, 2, 5, 4, 5, 4, 3, 0, 2, 1, 3, 7, 0,\n",
-       "        0, 3, 4, 3, 6, 5, 0, 6]))"
+       "(array([[ 0.52599068,  0.85293805],\n",
+       "        [ 0.82916905,  0.28287858],\n",
+       "        [ 0.12686308,  0.15170192],\n",
+       "        [ 0.20556819,  0.43478877],\n",
+       "        [ 0.51194171,  0.16988328],\n",
+       "        [ 0.86938193,  0.72004789],\n",
+       "        [ 0.19056038,  0.78325858],\n",
+       "        [ 0.55604042,  0.5872002 ]]),\n",
+       " array([2, 4, 6, 2, 0, 4, 3, 3, 7, 5, 5, 4, 3, 5, 6, 0, 3, 3, 7, 6, 2, 6, 6,\n",
+       "        5, 0, 6, 6, 5, 7, 7, 7, 6, 4, 1, 3, 5, 3, 0, 1, 3, 1, 3, 4, 1, 2, 2,\n",
+       "        0, 1, 5, 0, 3, 3, 7, 0, 1, 5, 4, 0, 4, 3, 7, 5, 5, 0, 5, 0, 0, 5, 6,\n",
+       "        5, 4, 1, 7, 6, 1, 5, 1, 7, 5, 0, 1, 0, 4, 3, 2, 7, 4, 4, 4, 2, 3, 6,\n",
+       "        0, 4, 1, 1, 5, 3, 3, 6]))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,6 +183,15 @@
     "initial= kmeansplusplus(data,8,2)\n",
     "kmeans(data, initial)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
